# multi-agent-chainlit-assistant

./: .env  .gitignore  LICENSE  README.md  chainlit.md  main.py  pyproject.toml
agent_files/: main_agent.py  shaitani_agent.py  web_search_agent.py
config/: agents_config.py  prompt_templates.py
tools/: shaitani_calculator_tool.py  web_search_tool.py
