[project]
name = "multi-agent-chainlit-assistant"
version = "0.1.0"
description = "A sophisticated multi-agent system built with Chainlit and OpenAI's agent framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zohaib Khan", email = "itxlevicodez@gmail.com"}
]
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.17",
    "tavily-python>=0.7.6",
]